# cpp_template

./: .gitignore  CMakeLists.txt  testRun.sh
include/: template.hpp
src/: template.cpp
test/: test_internal.hpp  test_main.cpp  test_template.cpp
